--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,9 +20,9 @@ spring:
     properties:
       hibernate:
         format_sql: false
-#  liquibase:
-#    enabled: true
-#    change-log: classpath:/db/changelog/changelog-master.yml
+  liquibase:
+    enabled: true
+    change-log: classpath:/db/changelog/changelog-master.yml
 
 server:
   port: 8083
