--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,3 +33,9 @@ application:
   client:
     account: http://localhost:8084/api/
     order:   http://localhost:8086/api/
+
+logging:
+  level:
+    root: info
+    com.company: debug
+
